Fix spacing on CTA button.

--- a/app/stylesheets/nightsprout.scss
+++ b/app/stylesheets/nightsprout.scss
@@ -199,7 +199,7 @@ html {
 						display: block;
 						float: left;
 						height: 40px;
-						padding: 10px 10px 0 20px;
+						padding: 10px 15px 0 20px;
 						background: transparent url("../images/nightsprout/cta-background.png") no-repeat 0 0;
 					}
 				}
